<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CampusPo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_home_page">主页</string>
    <string name="tab_special_page">精选</string>
    <string name="tab_message_page">消息</string>
    <string name="tab_personal_page">个人</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码 ?</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="refresh">刷新</string>
    <string name="join">加入</string>
    <string name="quit">退出</string>
    <string name="community_trends">社团动态</string>
    <string name="lost_and_found">失物招领</string>
    <string name="campus_news">校园新闻</string>
    <string name="poster_title">活动标题</string>
    <string name="poster_description">活动说明</string>
    <string name="wanted">招募</string>
    <string name="wanted_num">招募人数</string>
    <string name="no_limit">无限制</string>
    <string name="publish">发布</string>
    <string name="cancel">取消</string>
    <string name="save_as_draft_or_not">是否保存为草稿</string>
</resources>
