<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@id/tv_poster_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_title" />

    <EditText
        android:id="@+id/et_poster_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@id/tv_poster_description"
		android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_description" />

    <EditText
        android:id="@+id/et_poster_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
 		android:lines="4"
        android:ems="10" />

	<LinearLayout
        android:id="@+id/ly_wanted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_wanted_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wanted_num" />

        <EditText
            android:id="@+id/et_wanted_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
        
        <CheckBox
	        android:id="@+id/cb_no_limit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/no_limit" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_wanted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wanted" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
